--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>The Basic Language of the Web: HTML</title>
     <!-- for external css: -->
     <link rel="stylesheet" href="css/style.css" />
+
+    <!-- for using float.css -->
+    <!-- <link rel="stylesheet" href="css/float.css" /> -->
+
+    <!-- for using flexbox.css -->
+    <link rel="stylesheet" href="css/flexbox.css" />
   </head>
 
   <body>
@@ -22,136 +28,153 @@
         <h1>📘 The Code Magazine</h1>
 
         <nav>
-          <a href="blog.html">Blog</a>
+          <a href="blog.html" class="text-a">Blog</a>
           <a href="blog.html">Challenges</a>
-          <a href="blog.html">Flexbox</a>
+          <a href="flexbox.html">Flexbox</a>
           <a href="blog.html">CSS Grid</a>
         </nav>
       </header>
 
-      <article>
-        <header>
-          <h2 class="secondary-text">The Basic Language of the Web: HTML</h2>
+      <div class="article-aside-flex">
+        <article>
+          <header>
+            <h2 class="secondary-text">The Basic Language of the Web: HTML</h2>
+            <div class="author-flex">
+              <img
+                src="img/tanvir_gym.jpg"
+                alt="Headshot of Laura Jones"
+                height="50"
+                width="50"
+                class="author-img"
+              />
 
-          <img
-            src="img/tanvir_gym.jpg"
-            alt="Headshot of Laura Jones"
-            height="50"
-            width="50"
-            class="author-img"
-          />
+              <p id="author" class="author">
+                Posted by <strong>Tanvir Rifat</strong> on Monday, June 21st
+                2021
+              </p>
+            </div>
 
-          <p id="author" class="author">
-            Posted by <strong>Tanvir Rifat</strong> on Monday, June 21st 2021
-          </p>
-
-          <img
-            src="img/python.jpeg"
-            alt="HTML code on a screen"
-            width="752"
-            height="400"
-            class="python-img"
-          />
-        </header>
-
-        <p>
-          All modern websites and web applications are built using three
-          <em>fundamental</em>
-          technologies: HTML, CSS and JavaScript. These are the languages of the
-          web.
-        </p>
-
-        <p>
-          In this post, let's focus on HTML. We will learn what HTML is all
-          about, and why you too should learn it.
-        </p>
-
-        <h3>What is HTML?</h3>
-        <p>
-          HTML stands for <strong>H</strong>yper<strong>T</strong>ext
-          <strong>M</strong>arkup <strong>L</strong>anguage. It's a markup
-          language that web developers use to structure and describe the content
-          of a webpage (not a programming language).
-        </p>
-        <p>
-          HTML consists of elements that describe different types of content:
-          paragraphs, links, headings, images, video, etc. Web browsers
-          understand HTML and render HTML code as websites.
-        </p>
-        <p>In HTML, each element is made up of 3 parts:</p>
-
-        <ol>
-          <li>The opening tag</li>
-          <li>The closing tag</li>
-          <li>The actual element</li>
-        </ol>
-
-        <p>
-          You can learn more at
-          <a
-            href="https://developer.mozilla.org/en-US/docs/Web/HTML"
-            target="_blank"
-            >MDN Web Docs</a
-          >.
-        </p>
-
-        <h3>Why should you learn HTML?</h3>
-
-        <p>
-          There are countless reasons for learning the fundamental language of
-          the web. Here are 5 of them:
-        </p>
-
-        <ul>
-          <li>To be able to use the fundamental web dev language</li>
-          <li>
-            To hand-craft beautiful websites instead of relying on tools like
-            Worpress or Wix
-          </li>
-          <li>To build web applications</li>
-          <li>To impress friends</li>
-          <li>To have fun 😃</li>
-        </ul>
-
-        <p>Hopefully you learned something new here. See you next time!</p>
-      </article>
-
-      <aside>
-        <h4>Related posts</h4>
-
-        <ul class="related-ul">
-          <li>
             <img
               src="img/python.jpeg"
-              alt="Person programming"
-              width="75"
-              width="75"
+              alt="HTML code on a screen"
+              width="752"
+              height="400"
+              class="python-img"
             />
-            <a href="#">How to Learn Web Development</a>
-            <p class="related-author">By Tanvir Rifat</p>
-          </li>
-          <li>
-            <img
-              src="img/css_code.jfif"
-              alt="Lightning"
-              width="75"
-              heigth="75"
-            />
-            <a href="#">The Unknown Powers of CSS</a>
-            <p class="related-author">By Jim Dillon</p>
-          </li>
-          <li>
-            <img
-              src="img/js_code.png"
-              alt="JavaScript code on a screen"
-              width="75"
-              height="75"
-            />
-            <a href="#">Why JavaScript is Awesome</a>
-            <p class="related-author">By Matilda</p>
-          </li>
-        </ul>
-      </aside>
+          </header>
+
+          <p>
+            All modern websites and web applications are built using three
+            <em>fundamental</em>
+            technologies: HTML, CSS and JavaScript. These are the languages of
+            the web.
+          </p>
+
+          <p>
+            In this post, let's focus on HTML. We will learn what HTML is all
+            about, and why you too should learn it.
+          </p>
+
+          <h3>What is HTML?</h3>
+          <p>
+            HTML stands for <strong>H</strong>yper<strong>T</strong>ext
+            <strong>M</strong>arkup <strong>L</strong>anguage. It's a markup
+            language that web developers use to structure and describe the
+            content of a webpage (not a programming language).
+          </p>
+          <p>
+            HTML consists of elements that describe different types of content:
+            paragraphs, links, headings, images, video, etc. Web browsers
+            understand HTML and render HTML code as websites.
+          </p>
+          <p>In HTML, each element is made up of 3 parts:</p>
+
+          <ol>
+            <li>The opening tag</li>
+            <li>The closing tag</li>
+            <li>The actual element</li>
+          </ol>
+
+          <p>
+            You can learn more at
+            <a
+              href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+              target="_blank"
+              >MDN Web Docs</a
+            >.
+          </p>
+
+          <h3>Why should you learn HTML?</h3>
+
+          <p>
+            There are countless reasons for learning the fundamental language of
+            the web. Here are 5 of them:
+          </p>
+
+          <ul>
+            <li>To be able to use the fundamental web dev language</li>
+            <li>
+              To hand-craft beautiful websites instead of relying on tools like
+              Worpress or Wix
+            </li>
+            <li>To build web applications</li>
+            <li>To impress friends</li>
+            <li>To have fun 😃</li>
+          </ul>
+
+          <p>Hopefully you learned something new here. See you next time!</p>
+        </article>
+
+        <aside>
+          <h4>Related posts</h4>
+
+          <ul class="related-ul">
+            <li class="related-li">
+              <div class="related-flex">
+                <img
+                  src="img/python.jpeg"
+                  alt="Person programming"
+                  width="75"
+                  width="75"
+                />
+                <a href="#" class="related-url">How to Learn Web Development</a>
+
+                <p class="related-author">By Tanvir Rifat</p>
+              </div>
+            </li>
+            <hr />
+
+            <li class="related-li">
+              <div class="related-flex">
+                <img
+                  src="img/css_code.jfif"
+                  alt="Lightning"
+                  width="75"
+                  heigth="75"
+                />
+                <a href="#" class="related-url">The Powers of CSS</a>
+
+                <p class="related-author">By Jim Dillon</p>
+              </div>
+            </li>
+
+            <hr />
+
+            <li class="related-li">
+              <div class="related-flex">
+                <img
+                  src="img/js_code.png"
+                  alt="JavaScript code on a screen"
+                  width="75"
+                  height="75"
+                />
+                <a href="#" class="related-url">Why JavaScript is Awesome</a>
+                <p class="related-author">By Matilda</p>
+              </div>
+            </li>
+          </ul>
+        </aside>
+      </div>
 
       <footer>
         <p id="copyright">Copyright &copy; 2027 by The Code Magazine.</p>
@@ -165,7 +188,6 @@
         Like.innerHTML = `Thank You for liked this blog ✌✌!`;
 
         like.style.backgroundColor = "#a01877";
-        like.style.width = "43%";
       });
     </script>
   </body>
