--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 />
                 <a href="#" class="related-url">How to Learn Web Development</a>
 
-                <p class="related-author">By Tanvir Rifat</p>
+                <p class="related-author">By Rifat</p>
               </div>
             </li>
             <hr />
